# dwm

./: .gitignore  CMakeLists.txt  autostart.def.h  config.def.h  config.h  drw.h  dwm.c  myapps.def.h  rules.def.h
